tests/errors/sem_fun_arg_type_mismatch.kt
fun multiply(a: Double, b: Int): Double {
    return a * b
}

fun main() {
    multiply("Hello", 5)
}
